# contextforge-gateway-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
crates/contextforge-gateway-rs/: Cargo.toml
crates/contextforge-gateway-rs-lib/: Cargo.toml
crates/contextforge-gateway-rs-lib/src/: common.rs  const_values.rs  lib.rs  tools.rs
crates/contextforge-gateway-rs-lib/src/gateway/: mcp_gateway.rs
crates/contextforge-gateway-rs-lib/src/gateway/session_store/: local_session_store.rs
crates/contextforge-gateway-rs-lib/src/layers/: claims_id.rs  session_id.rs  user_config_store.rs
crates/contextforge-gateway-rs-lib/src/user_config_store/: redis_config_store.rs
crates/contextforge-gateway-rs/src/: logging.rs  main.rs  runtime.rs
crates/contextforge-load-test/: Cargo.toml
crates/contextforge-load-test/src/: main.rs
crates/mcp-gateway-rs/: Cargo.toml
crates/mcp-gateway-rs-lib/: Cargo.toml
crates/mcp-gateway-rs-lib/src/: common.rs  const_values.rs  lib.rs  tools.rs
crates/mcp-gateway-rs-lib/src/gateway/: common.rs  gateway.rs  mcp_call_validator.rs  mcp_gateway.rs  mod.rs  session_manager.rs
crates/mcp-gateway-rs-lib/src/gateway/session_store/: local_session_store.rs  mod.rs  (+1 more)
crates/mcp-gateway-rs-lib/src/layers/: claims_id.rs  user_config_store.rs
crates/mcp-gateway-rs-lib/src/user_config_store/: mod.rs  redis_config_store.rs
crates/mcp-gateway-rs/src/: logging.rs  main.rs  runtime.rs
crates/mcp-load-test/: Cargo.toml
crates/mcp-load-test/src/: main.rs
docker/: Dockerfile  Dockerfile_dev  dev.Dockerfile  docker-compose-local.yaml  docker-compose.yml  mcp_conformance.Dockerfile  mcp_counter.Dockerfile  nginx.conf
reports/: cf-gateway-performance-report-2026-05-01.html
src/: common.rs  lib.rs  tools.rs
