[package]
name = "mcp-gateway-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
#rmcp = {version="1.3.0", features=["server","auth","transport-streamable-http-server","elicitation"]}
#rmcp = {version="1.3.0", features=["server","client", "auth","transport-streamable-http-server","reqwest","transport-streamable-http-client-reqwest", "elicitation"], path="../mcp-rust-sdk-dawid/crates/rmcp"}
rmcp = {version="1.3.0", features=["server","client", "auth","transport-streamable-http-server","reqwest","transport-streamable-http-client-reqwest", "elicitation"], git="https://github.com/mcp-gateway-rs/mcp-rust-sdk", branch="enabling_propagation_of_new_session_id"}
serde = "1.0"
serde_json="1.0"
tracing                         = "0.1"
tracing-appender                = "0.2.3"
tracing-opentelemetry           = "0.32"
tracing-subscriber              = { version = "0.3", features = ["env-filter"] }
tokio                           = { version = "1.48.0", features = ["full"] }
tokio-stream                    = "0.1.17"
axum                           = "0.8"
anyhow                          = "1.0"
tower-http                      ={version = "0.6.8", features=["full"]}
tower-layer =   "0.3.3"
tower="0.5.3"
http="1.4.0"
axum-jwt-auth = "0.6.3"
futures = {version = "0.3", features=["std"]}
jsonwebtoken = "10.3.0"
chrono = "0.4.44"
redis = {version="1.1.0", features=["default","tokio-rustls-comp"]}
clap = { version = "4.5.60", features = ["derive", "env"] }
thiserror = "2.0.18"
openid = "0.23.0"
url = "2.5.8"
rmp-serde = "1.3.1"
async-trait = "0.1.89"
http-body="1.0.1"
http-body-util = "0.1.3"
bytes = "1.11.1"
reqwest="0.13"
itertools = "0.14"
